txt-output/34.txt
RAW FILE BEING COMPILED: 
---------------------------------------

module Main where

import Data.Char

-- Problem: + should be ++
sumLists = sum2 . map sum2                       
sum2 [] = []
sum2 (x:xs) = x + sum2 xs

main :: IO ()
main = putStrLn "hello world"

OUTPUT FROM GHC v 6.10.4: 
---------------------------------------

﻿C:\ghc\ghc-6.10.4\bin\ghc.exe : 
At line:1 char:1
+ C:\ghc\ghc-6.10.4\bin\ghc.exe ill-typed\34.hs *> aLog.txt
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (:String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
ill-typed\34.hs:6:11:
    No instance for (Num [a])
      arising from a use of `sum2' at ill-typed\34.hs:6:11-14
    Possible fix: add an instance declaration for (Num [a])
    In the first argument of `(.)', namely `sum2'
    In the expression: sum2 . map sum2
    In the definition of `sumLists': sumLists = sum2 . map sum2


OUTPUT FROM GHC v 9.2.5: 
---------------------------------------

﻿[1 of 1] Compiling Main             ( ill-typed\34.hs, ill-typed\34.o )
C:\ghc\ghc-9.2.5\bin\ghc.exe : 
At line:1 char:1
+ C:\ghc\ghc-9.2.5\bin\ghc.exe ill-typed\34.hs *> bLog.txt
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (:String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
ill-typed\34.hs:6:12: error:
    * No instance for (Num [a0]) arising from a use of `sum2'
    * In the first argument of `(.)', namely `sum2'
      In the expression: sum2 . map sum2
      In an equation for `sumLists': sumLists = sum2 . map sum2
  |
6 | sumLists = sum2 . map sum2                       
  |            ^^^^
